Setup Routing & Add Components

--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,35 @@
-#connect-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  --radix-connect-button-width: 11.25rem;
-  --radix-connect-button-height: 2.875rem;
-  --radix-connect-button-border-radius: 0.5rem;
-}
-@media (max-width: 384px) {
-  #connect-btn {
-    --radix-connect-button-width: 100px;
-  }
-}
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
-/* @font-face {
-  font-family: 'MyCustomFont';
-  src: url('/fonts/MyCustomFont.woff2') format('woff2');
-} */
+
+@theme {
+  --color-primary: #080C12;
+  --color-secondary: #0B266A;
+  --color-accent: #1756EF;
+
+  --color-light-100: #cecefb;
+  --color-light-200: #a8b5db;
+
+  --color-gray-100: #9ca4ab;
+
+  --color-dark-100: #0f0d23;
+
+  --font-dm-sans: DM Sans, sans-serif;
+
+  --breakpoint-xs: 480px;
+
+  --background-image-hero-pattern: url("/card_referalcode.png");
+  --background-image-wrap-card: url("/wrap-card_custom.svg");
+}
 
 @layer base {
   body {
     /* font-family: "arial", sans-serif; */
     font-family: "DM Sans", serif;
     font-optical-sizing: auto;
-    @apply bg-primary;
+    background: var(--color-primary);
   }
 
   h1 {
@@ -60,41 +63,7 @@
   a.active {
     @apply text-accent;
   }
-
-  .align-icon_1cap {
-    height: 1cap;
-    aspect-ratio: 1;
-    border-radius: 50%;
-    @apply bg-primary;
-  }
-  .align-icon_2cap {
-    height: 2cap;
-    aspect-ratio: 1;
-    border-radius: 50%;
-    background-color: transparent;
-  }
-  
-  .bg-gradient_right {
-    @apply bg-gradient-to-r from-secondary/20 to-accent/0;
-  }
-  .bg-gradient_left {
-    @apply bg-gradient-to-l from-accent/10 to-secondary/0;
-  }
-
-  .linear-gradient {
-    @apply absolute w-full h-40 bg-gradient-to-b from-secondary/60 to-primary z-0;
-  }
-
-  .hide-scrollbar {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-  
-    &::-webkit-scrollbar {
-      display: none;
-    }
-  }
 }
-
 
 @layer components {
   .gradient {
@@ -104,11 +73,11 @@
   }
 
   .pattern {
-    @apply absolute w-full h-40 left-[50%] -translate-x-[50%] bg-gradient-to-b from-secondary/60 to-primary z-0;
+    @apply absolute w-full h-40 bg-gradient-to-b from-secondary/60 to-primary z-0;
   }
 
   .wrapper {
-    @apply relative px-4 py-4 xs:p-10 max-w-[480px] mx-auto flex flex-col justify-items-center z-10 text-white bg-transparent;
+    @apply px-4 py-4 xs:p-10 max-w-[480px] mx-auto flex flex-col justify-items-center relative z-10 text-white;
   }
 
   .card-info__total-asset {
@@ -165,46 +134,38 @@
   }
 
   .card-transaction {
-    @apply flex justify-between my-0 p-3 rounded-2xl;
-    /* bg-gradient_right; */
+    @apply flex justify-between my-0 p-3 rounded-2xl bg-gradient_right;
     & .right {
       @apply flex gap-2.5;
       & .logo-crypto {
-        @apply w-10 h-full object-cover rounded-full overflow-hidden;
-        & img {
-          @apply w-10 h-full align-bottom;
-        }
+        @apply w-10 h-10 rounded-full overflow-hidden;
       }
     }
   }
 
   .card-task {
     @apply flex justify-between items-center px-[17px] py-3.5 rounded-2xl;
-    & .left {
-      @apply flex flex-row gap-2;
-    }
-    /* & div {
+    & div {
       @apply flex flex-row gap-2;
       & .icon {
         @apply align-icon;
       }
-    } */
+    }
   }
 
   .card-laderboard {
-    @apply flex justify-between px-[17px] py-2 rounded-xl 
-    /* border border-accent/10 */
+    @apply flex justify-between px-[17px] py-3 rounded-xl border border-accent/10 
     /* bg-accent/5 */
-    /* odd:bg-accent/5 even:bg-primary */
+    odd:bg-accent/5 even:bg-primary
     ;
     & .left {
       @apply relative flex items-center flex-auto gap-2;
-      /* & .icon {
+      & .icon {
         @apply align-icon;
-      } */
+      }
     }
     & .right {
-      @apply w-7 h-9 px-0 py-px -skew-x-3;
+      @apply w-7 h-9 px-0 py-px -skew-3;
       & .rank {
         @apply w-full h-full text-center text-sm font-normal leading-9;
       }
@@ -212,7 +173,7 @@
   }
 
   .card-referalcode {
-    @apply bg-wrap-card_referral bg-no-repeat w-[342px] h-[610px] flex justify-items-center flex-col text-center mx-auto px-7;
+    @apply bg-hero-pattern bg-no-repeat w-[342px] h-[610px] flex justify-items-center flex-col text-center mx-auto px-7;
     & div.top {
       @apply mt-20;
       & .text {
@@ -236,10 +197,10 @@
   .card-point {
     @apply  relative w-[138px] h-[88px] flex flex-col justify-center items-center gap-1 px-[14px] rounded-2xl border border-accent/50;
     & .premium {
-      @apply absolute -top-1.5 -left-px flex align-baseline items-center gap-0.5 pl-2 pr-2.5 py-0.5 bg-accent rounded-tl-xl rounded-br-xl;
-      /* & .icon {
+      @apply absolute -top-1.5 -left-0.5 flex align-baseline items-center gap-0.5 pl-2 pr-2.5 py-0.5 bg-accent rounded-tl-xl rounded-br-xl;
+      & .icon {
         @apply align-icon;
-      } */
+      }
     }
   }
 
@@ -253,11 +214,11 @@
     } 
     & .right {
       @apply flex flex-col justify-between items-end;
-      /* & div {
+      & div {
         & .icon {
           @apply align-icon_2cap p-1;
         }
-      } */
+      }
     }
   }
 
@@ -265,20 +226,19 @@
     @apply flex flex-col justify-center flex-auto max-w-[110px] h-auto px-2 pt-3 pb-4 gap-1.5 rounded-xl border border-accent/10 bg-primary;
     & .card-info {
       @apply flex justify-center items-center align-baseline gap-1;
-      /* & .icon {
+      & .icon {
         @apply align-icon;
-      } */
+      }
     }
-  }
-
-  .banner {
-    @apply relative flex justify-center;
   }
 
   .connect-btn {
     @apply text-white bg-accent/10 hover:bg-secondary border border-accent/10 font-medium rounded-full text-xs pl-3 pr-1.5 py-1.5 align-baseline text-center inline-flex gap-1 items-center cursor-pointer outline-none focus:outline-0;
     & .div {
-      @apply text-xs font-light tracking-wide leading-none;
+      @apply text-xs font-light tracking-wide leading-0;
+    }
+    & .icon {
+      @apply align-icon_2cap;
     }
   }
 
@@ -288,14 +248,14 @@
       @apply relative w-full h-full flex flex-col justify-center gap-2 mx-auto px-0 py-0 bg-primary rounded-[14px];
     }
   }
-  .wrap-list_tasks {
+  .list-tasks {
     @apply relative inline-flex items-center justify-center p-0.5 my-20 overflow-hidden rounded-3xl bg-gradient-to-b from-accent/10 to-primary;
     & .content {
       @apply relative w-full h-full flex flex-col justify-center gap-2 mx-auto px-4 py-8 bg-primary rounded-[22px];
     }
   }
   
-  .wrap-list_leaderboard {
+  .list-leaderboard {
     @apply relative inline-flex items-center justify-center p-0.5 my-14 overflow-hidden rounded-3xl bg-gradient-to-b from-accent/10 to-primary;
     & .content {
       @apply relative w-full h-full flex flex-col justify-center gap-2 mx-auto px-2 py-2 bg-primary rounded-[22px];
@@ -314,54 +274,34 @@
   }
 
   .list-transactions {
-    @apply flex flex-col justify-center w-full gap-2 mb-32;
-  }
-
-  .list-leaderboards {
-    @apply flex flex-col justify-center w-full gap-2 mb-32;
-  }
-
-  .list-tasks {
-    @apply flex flex-col justify-center w-full gap-2 mb-32;
-  }
-  
-  .list-history_games {
-    @apply flex flex-col justify-center w-full gap-2 mb-32;
+    @apply flex flex-col justify-center w-full gap-2 hide-scrollbar;
   }
 
 }
 
-/* @utility align-icon {
-  @layer base {
-    height: 1cap;
-    aspect-ratio: 1;
-    border-radius: 50%;
-    background-color: var(--color-secondary);
-  }
+@utility align-icon {
+  height: 1cap;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background-color: var(--color-secondary);
 }
 
 @utility align-icon_2cap {
-  @layer base {
-    height: 2cap;
-    aspect-ratio: 1;
-    border-radius: 50%;
-    background-color: transparent;
-  }
+  height: 2cap;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background-color: transparent;
 }
 
 @utility bg-gradient_right {
-  @layer base {
-    @apply bg-gradient-to-r from-secondary/20 to-accent/0;
-  }
+  @apply bg-gradient-to-r from-secondary/20 to-accent/0;
 }
 
 @utility hide-scrollbar {
-  @layer base {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-  
-    &::-webkit-scrollbar {
-      display: none;
-    }
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
   }
-} */
+}
