--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,17 @@
       display: none;
     }
   }
+
+   /* Hide scrollbar for Chrome, Safari */
+   .group::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge & Firefox */
+  .group {
+    -ms-overflow-style: none;  /* IE & Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
 }
 
 
